erDiagram
    USERS ||--o{ MONTHLY_INCOME : registra
    USERS ||--o{ EXPENSES : registra
    USERS ||--o{ DEBTS : tiene
    USERS ||--o{ SAVINGS_GOALS : tiene
    EXPENSE_CATEGORIES ||--o{ EXPENSES : clasifica
    DEBTS ||--o{ EXPENSES : "paga opcionalmente"
    DEBTS ||--o{ DEBT_PAYMENTS : registra
    SAVINGS_GOALS ||--o{ SAVINGS_CONTRIBUTIONS : recibe

    USERS {
        id INT PK
        email VARCHAR
        password_hash VARCHAR
        google_id VARCHAR
        full_name VARCHAR
        created_at TIMESTAMP
    }

    MONTHLY_INCOME {
        id INT PK
        amount DECIMAL
        month INT
        year INT
        created_at TIMESTAMP
        user_id INT FK
    }

    EXPENSE_CATEGORIES {
        id INT PK
        name VARCHAR
    }

    EXPENSES {
        id INT PK 
        description VARCHAR
        amount DECIMAL
        date DATE
        created_at TIMESTAMP
        user_id INT FK
        category_id INT FK
        debt_id INT FK
    }

    DEBTS {
        id INT PK
        name VARCHAR
        total_amount DECIMAL
        remaining_amount DECIMAL
        minimum_monthly_payment DECIMAL
        interest_rate DECIMAL
        due_date DATE
        created_at TIMESTAMP
        user_id INT FK
    }

    DEBT_PAYMENTS {
        id INT PK
        amount DECIMAL
        payment_date DATE
        note VARCHAR
        debt_id INT FK
    }

    SAVINGS_GOALS {
        id INT PK
        name VARCHAR
        target_amount DECIMAL
        current_amount DECIMAL
        deadline DATE
        created_at TIMESTAMP
        user_id INT FK
    }

    SAVINGS_CONTRIBUTIONS {
        id INT PK
        amount DECIMAL
        date DATE
        note VARCHAR
        savings_goal_id INT FK
    }


